2000-09-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* utils/makedb/dblook.c:
	    The "-dump" mode has been broken for a while.
	    Turned out that auto-variables for key & data need
	    (apparently) be zeroed before even the R_FIRST
	    position pickup succeeds.  D'uh !

	* lib/selfaddrs.c:
	    Solaris resolver function don't apparently like (at all)
	    if the host parameter to e.g. gethostbyname() is 0-size
	    string.

	* smtpserver/cfgread.c, man/smtpserver.8:
	    Recognize "PARAM bindaddr iface:...." syntax to define
	    named interface on which SOME address you want to bind.
	    (Prefers IPv6 if such exists, otherwise IPv4.)

	* smtpserver/smtpdata.c:
	    During DATA and BDAT processing, if the feeder
	    failed to send first 1024 bytes of content, our
	    data transfer watchdog timer was not initialized.
	    I was wondering why one Solaris machine kept
	    collecting hanging smtpserver processes...

	* libc/mailvars.c, libc/mail.c, libc/sfmail.c:
	    - Rearranged couple of variables to separate file
	      so that  mail.c  object won't be included when
	      not needed..  (at the scheduler, and at the mailbox)
	    - reworked file renaming to always use ino based
	      decimal number string at the destination directory.
	    - reconverted mail.c to SFIO based sfmail.c

2000-08-30  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* compat/sendmail/sendmail.c:
	    - Recognize  "sendmail -bd"  as an order to run "zmailer" script.
	    - Input and encode INFROM= data into DSN dataset.

	* proto/cf/aliases.cf, proto/cf/crossbar.cf, proto/cf/fqdnalias.cf,
	  proto/cf/standard.cf, router/functions.c, router/prototypes.h,
	  router/rfc822.c, router/shliaise.c:
	    - New experiental code to handle DSN data handling bugs in
	      alias expansion-like situations.  This is NOT complete thing!
	    - Debug code to analyze the effects of the SCHEDULERDIRHASH
	      ZENV variable.

	* transports/libta/ctlopen.c: